# authly-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NEXT_STEPS.md  PLAN.md  README.md  crates.js  docker-compose.yml  help.html  index.html  settings.html  src-files.js
actix_credentials/: all.html  fn.main.html  index.html  sidebar-items.js  struct.AppState.html  struct.LocalUser.html  struct.LoginCredentials.html  struct.MyCredentialsProvider.html  struct.MyUserMapper.html  struct.index.html  struct.login.html  struct.protected.html
actix_github/: all.html  fn.main.html  index.html  sidebar-items.js  struct.AppState.html  struct.index.html  struct.protected.html
actix_resource_server/: all.html  fn.main.html  index.html  sidebar-items.js  struct.MyClaims.html  struct.index.html  struct.protected.html
actix_spa_jwt/: all.html  fn.main.html  index.html  sidebar-items.js  struct.AppState.html  struct.callback_handler.html  struct.frontend.html  struct.login_handler.html  struct.protected_resource.html
authkestra/: Cargo.toml  index.html
authkestra-actix/: Cargo.toml  README.md
authkestra-actix/src/: helpers.rs  lib.rs
authkestra-axum/: Cargo.toml  README.md
authkestra-axum/src/: helpers.rs  lib.rs
authkestra-core/: Cargo.toml  README.md
authkestra-core/src/: discovery.rs  error.rs  lib.rs  state.rs
authkestra-examples/: .env.example  Cargo.toml
authkestra-examples/examples/: actix_credentials.rs  actix_github.rs  actix_resource_server.rs  actix_spa_jwt.rs  axum_credentials.rs  axum_resource_server.rs  axum_spa_jwt.rs  client_credentials_flow.rs  offline_validation.rs  oidc_generic.rs
authkestra-examples/src/: lib.rs
authkestra-flow/: Cargo.toml  README.md
authkestra-flow/src/: client_credentials_flow.rs  device_flow.rs  lib.rs  oauth2.rs
authkestra-oidc/: Cargo.toml  README.md
authkestra-oidc/src/: discovery.rs  error.rs  lib.rs  provider.rs
authkestra-providers-discord/: Cargo.toml  README.md
authkestra-providers-discord/src/: lib.rs
authkestra-providers-discord/tests/: discord_oauth.rs
authkestra-providers-github/: Cargo.toml  README.md
authkestra-providers-github/src/: lib.rs
authkestra-providers-github/tests/: github_oauth.rs
authkestra-providers-google/: Cargo.toml  README.md
authkestra-providers-google/src/: lib.rs
authkestra-providers-google/tests/: google_oauth.rs
authkestra-session/: Cargo.toml  README.md
authkestra-session/src/: lib.rs  memory.rs  redis_store.rs  sql.rs
authkestra-token/: Cargo.toml  README.md
authkestra-token/src/: lib.rs  offline_validation.rs
authkestra/providers/: index.html
authkestra/src/: lib.rs
authkestra/tests/: typestate_tests.rs
authkestra_actix/: all.html  index.html  sidebar-items.js  struct.AuthSession.html  struct.AuthToken.html  struct.Jwt.html  trait.AuthkestraActixExt.html
authkestra_axum/: all.html  enum.SameSite.html  index.html  sidebar-items.js  struct.AuthSession.html  struct.AuthToken.html  struct.Authkestra.html  struct.AuthkestraState.html  struct.Cookie.html  struct.Jwt.html  struct.Session.html  struct.SessionConfig.html  trait.AuthkestraAxumExt.html  trait.SessionStore.html
authkestra_core/: all.html  enum.AuthError.html  enum.SameSite.html  index.html  sidebar-items.js  struct.Identity.html  struct.MemoryStore.html  struct.OAuthToken.html  struct.Session.html  struct.SessionConfig.html  trait.CredentialsProvider.html  trait.ErasedOAuthFlow.html  trait.OAuthProvider.html  trait.SessionStore.html  trait.UserMapper.html
authkestra_flow/: all.html  index.html  sidebar-items.js  struct.Authkestra.html  struct.AuthkestraBuilder.html  struct.CredentialsFlow.html  struct.OAuth2Flow.html  trait.ErasedOAuthFlow.html
authkestra_oidc/: all.html  index.html
authkestra_providers_discord/: struct.DiscordProvider.html
authkestra_providers_github/: struct.GithubProvider.html
authkestra_providers_google/: struct.GoogleProvider.html
authkestra_session/: all.html  enum.AuthError.html  index.html  sidebar-items.js  struct.Identity.html  struct.MemoryStore.html  struct.Session.html  trait.SessionStore.html
authkestra_token/: all.html  index.html  struct.Claims.html  struct.TokenManager.html
authly-actix/: Cargo.toml
authly-actix/src/: helpers.rs  lib.rs
authly-axum/: Cargo.toml
authly-axum/src/: helpers.rs  lib.rs
authly-core/: Cargo.toml  README.md
authly-core/src/: lib.rs  pkce.rs
authly-flow/: Cargo.toml
authly-flow/src/: device_flow.rs  lib.rs
authly-providers-discord/: Cargo.toml
authly-providers-github/: Cargo.toml
authly-providers-google/: Cargo.toml
authly-providers-google/src/: lib.rs
authly-session/: Cargo.toml
authly-session/src/: lib.rs  sql_store.rs
authly-token/: Cargo.toml
axum_credentials/: all.html  fn.index.html  fn.login.html  fn.main.html  fn.protected.html  index.html  sidebar-items.js  struct.AppState.html  struct.LocalUser.html  struct.LoginCredentials.html  struct.MyCredentialsProvider.html  struct.SqlxUserMapper.html
axum_oauth/: all.html  fn.index.html  fn.main.html  fn.protected.html  index.html  sidebar-items.js
axum_resource_server/: all.html  fn.index.html  fn.main.html  fn.protected.html  index.html  sidebar-items.js  struct.AppState.html  struct.MyClaims.html
axum_spa_jwt/: all.html  fn.callback_handler.html  fn.frontend.html  fn.login_handler.html  fn.logout_handler.html  fn.main.html  fn.protected_resource.html  index.html  sidebar-items.js  struct.AppState.html
client_credentials_flow/: all.html  fn.main.html  index.html
device_flow/: all.html  fn.main.html  index.html
examples/: .env.example  actix_github.rs  axum_credentials.rs  axum_discord.rs  axum_github.rs  axum_google.rs  axum_oauth.rs  client_credentials_flow.rs  device_flow.rs  get_started.rs  offline_validation.rs  oidc_generic.rs
offline_validation/: all.html  fn.main.html  index.html
oidc_generic/: all.html  fn.index.html  fn.main.html  fn.protected.html  index.html  sidebar-items.js  struct.AppState.html
search.index/: 0009fea24f48.js  05678b251fd7.js  0675e541e152.js  09e933603885.js  0a7593efeb32.js  (+67 more)
(+124 files in other folders)
