[workspace]
resolver = "2"
members = [
    "authkestra-core",
    "authkestra-flow",
    "authkestra-session",
    "authkestra-token",
    "authkestra-providers-github",
    "authkestra-providers-google",
    "authkestra-providers-discord",
    "authkestra-axum", "authkestra-oidc", "authkestra-actix",
    "authkestra",
    "authkestra-examples",
]
