[package]
name = "authkestra-actix"
version = "0.1.0"
edition = "2021"
description = "Actix-web integration for the authkestra authentication framework"
repository = "https://github.com/marcjazz/authkestra-rs"
license = "MIT OR Apache-2.0"
keywords = ["auth", "actix", "web", "middleware"]
categories = ["authentication", "web-programming::http-server"]

[dependencies]
authkestra-core = { version = "0.1.0", path = "../authkestra-core" }
authkestra-session = { version = "0.1.0", path = "../authkestra-session" }
authkestra-token = { version = "0.1.0", path = "../authkestra-token" }
authkestra-flow = { version = "0.1.0", path = "../authkestra-flow" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
actix-rt = "2"
authkestra-providers-github = { version = "0.1.0", path = "../authkestra-providers-github" }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[[example]]
name = "actix_github"
path = "../examples/actix_github.rs"
