[package]
name = "authkestra-axum"
version = "0.1.0"
edition = "2021"
description = "Axum integration for the authkestra authentication framework"
repository = "https://github.com/marcjazz/authkestra-rs"
license = "MIT OR Apache-2.0"
keywords = ["auth", "axum", "web", "middleware"]
categories = ["authentication", "web-programming::http-server"]

[dependencies]
authkestra-core = { version = "0.1.0", path = "../authkestra-core" }
authkestra-session = { version = "0.1.0", path = "../authkestra-session" }
authkestra-flow = { version = "0.1.0", path = "../authkestra-flow" }
authkestra-token = { version = "0.1.0", path = "../authkestra-token" }
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-cookies = "0.11.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
dotenvy = "0.15"
authkestra-session = { version = "0.1.0", path = "../authkestra-session", features = ['sqlite', 'store-redis'] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
authkestra-oidc = { version = "0.1.0", path = "../authkestra-oidc" }
authkestra-providers-github = { version = "0.1.0", path = "../authkestra-providers-github" }
authkestra-providers-google = { version = "0.1.0", path = "../authkestra-providers-google" }
authkestra-providers-discord = { version = "0.1.0", path = "../authkestra-providers-discord" }
authkestra = { version = "0.1.0", path = "../authkestra", features = ["axum", "github", "flow", "session"] }

[[example]]
name = "axum_oauth"
path = "../examples/axum_oauth.rs"

[[example]]
name = "axum_credentials"
path = "../examples/axum_credentials.rs"

[[example]]
name = "oidc_generic"
path = "../examples/oidc_generic.rs"

[[example]]
name = "get_started"
path = "../examples/get_started.rs"
