[package]
name = "authkestra-axum"
version = "0.1.1"
edition = "2021"
description = "Axum integration for the authkestra authentication framework"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "axum", "web", "middleware"]
categories = ["authentication", "web-programming::http-server"]

[dependencies]
authkestra-core = { version = "0.1.0", path = "../authkestra-core" }
authkestra-session = { version = "0.1.0", path = "../authkestra-session" }
authkestra-flow = { version = "0.1.0", path = "../authkestra-flow" }
authkestra-token = { version = "0.1.0", path = "../authkestra-token" }
axum = "0.8.8"
jsonwebtoken = "10.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-cookies = "0.11.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
