[package]
name = "authkestra-core"
version = "0.1.0"
edition = "2021"
description = "Core traits and types for the authkestra authentication framework"
repository = "https://github.com/marcjazz/authkestra-rs"
license = "MIT OR Apache-2.0"
keywords = ["auth", "authentication", "oauth2", "oidc"]
categories = ["authentication"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22.1"
rand = "0.9.2"
