[package]
name = "authkestra-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
authkestra = { path = "../authkestra", features = ["full"] }
authkestra-core = { path = "../authkestra-core" }
authkestra-flow = { path = "../authkestra-flow" }
authkestra-session = { path = "../authkestra-session", features = ["sqlite", "store-redis"] }
authkestra-token = { path = "../authkestra-token" }
authkestra-oidc = { path = "../authkestra-oidc" }
authkestra-axum = { path = "../authkestra-axum" }
authkestra-actix = { path = "../authkestra-actix" }
authkestra-providers-github = { path = "../authkestra-providers-github" }
authkestra-providers-google = { path = "../authkestra-providers-google" }
authkestra-providers-discord = { path = "../authkestra-providers-discord" }

axum = "0.8.8"
actix-web = "4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tower-cookies = "0.11.0"
dotenvy = "0.15"
reqwest = { version = "0.13.1", features = ["json"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
path = "src/lib.rs"

[[example]]
name = "actix_credentials"
path = "examples/actix_credentials.rs"

[[example]]
name = "actix_github"
path = "examples/actix_github.rs"

[[example]]
name = "actix_resource_server"
path = "examples/actix_resource_server.rs"

[[example]]
name = "actix_spa_jwt"
path = "examples/actix_spa_jwt.rs"

[[example]]
name = "axum_credentials"
path = "examples/axum_credentials.rs"

[[example]]
name = "axum_oauth"
path = "examples/axum_oauth.rs"

[[example]]
name = "axum_resource_server"
path = "examples/axum_resource_server.rs"

[[example]]
name = "axum_spa_jwt"
path = "examples/axum_spa_jwt.rs"

[[example]]
name = "client_credentials_flow"
path = "examples/client_credentials_flow.rs"

[[example]]
name = "device_flow"
path = "examples/device_flow.rs"

[[example]]
name = "offline_validation"
path = "examples/offline_validation.rs"

[[example]]
name = "oidc_generic"
path = "examples/oidc_generic.rs"
