[package]
name = "authkestra-examples"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
authkestra = { path = "../authkestra", features = ["full"] }
authkestra-core = { path = "../authkestra-core" }
authkestra-flow = { path = "../authkestra-flow" }
authkestra-session = { version = "0.1.1", path = "../authkestra-session", features = ["sqlite", "redis-store"] }
authkestra-token = { path = "../authkestra-token" }
authkestra-oidc = { path = "../authkestra-oidc" }
authkestra-axum = { path = "../authkestra-axum" }
authkestra-actix = { path = "../authkestra-actix" }
authkestra-providers-github = { path = "../authkestra-providers-github" }
authkestra-providers-google = { path = "../authkestra-providers-google" }
authkestra-providers-discord = { path = "../authkestra-providers-discord" }

axum = "0.8.8"
actix-web = "4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tower-cookies = "0.11.0"
dotenvy = "0.15"
reqwest = { version = "0.13.1", features = ["json"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
