[package]
name = "authkestra-flow"
version = "0.1.1"
edition = "2021"
description = "OAuth2 and OIDC flow orchestration for the authkestra framework"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "oauth2", "oidc", "flow"]
categories = ["authentication"]

[dependencies]
authkestra-core = { version = "0.1.0", path = "../authkestra-core" }
async-trait = "0.1"
authkestra-token = { version = "0.1.0", path = "../authkestra-token" }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json", "form"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
