[package]
name = "authkestra-flow"
version = "0.1.1"
edition = "2021"
description = "OAuth2 and OIDC flow orchestration for the authkestra framework"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "oauth2", "oidc", "flow"]
categories = ["authentication"]

[dependencies]
authkestra-core = { version = "0.1.1", path = "../authkestra-core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
authkestra-token = { version = "0.1.1", path = "../authkestra-token" }
authkestra-session = { version = "0.1.1", path = "../authkestra-session" }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json", "form"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
