[package]
name = "authkestra-oidc"
version = "0.1.1"
edition = "2021"
description = "OpenID Connect (OIDC) implementation for the authkestra framework"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "oidc", "openid-connect"]
categories = ["authentication"]

[dependencies]
authkestra-core = { version = "0.1.0", path = "../authkestra-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["json", "form"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
thiserror = "2.0.18"
async-trait = "0.1"
url = "2.5"
urlencoding = "2.1"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22.1"

[dev-dependencies]
mockito = "1.4"
