[package]
name = "authkestra-providers-github"
version = "0.1.1"
edition = "2021"
description = "GitHub OAuth provider for the authkestra framework"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "oauth2", "github"]
categories = ["authentication"]

[dependencies]
authkestra-core = { version = "0.1.1", path = "../authkestra-core" }
async-trait = "0.1"
reqwest = { version = "0.13.1", features = ["json", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wiremock = "0.6.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
