[package]
name = "authkestra-token"
version = "0.1.1"
edition = "2021"
description = "JWT token handling for the authkestra framework"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "jwt", "token", "authentication"]
categories = ["authentication"]

[dependencies]
authkestra-core = { version = "0.1.0", path = "../authkestra-core" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
paseto = "2.0.0"
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.18"
arc-swap = "1.6"

[[example]]
name = "offline_validation"
path = "../examples/offline_validation.rs"
