[package]
name = "authly-actix"
version = "0.1.0"
edition = "2021"
description = "Actix-web integration for the authly authentication framework"
repository = "https://github.com/marcjazz/authly-rs"
license = "MIT OR Apache-2.0"
keywords = ["auth", "actix", "web", "middleware"]
categories = ["authentication", "web-programming::http-server"]

[dependencies]
authly-core = { path = "../authly-core" }
authly-session = { path = "../authly-session", features = ["store-redis", "store-sqlx", "sqlite"] }
authly-token = { path = "../authly-token" }
authly-flow = { path = "../authly-flow" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
thiserror = "2.0.18"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"
actix-utils = "3.0"

[dev-dependencies]
actix-rt = "2"
authly-providers-github = { path = "../authly-providers-github" }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[[example]]
name = "actix_github"
path = "../examples/actix_github.rs"
