[package]
name = "authly-axum"
version = "0.1.0"
edition = "2021"
description = "Axum integration for the authly authentication framework"
repository = "https://github.com/marcjazz/authly-rs"
license = "MIT OR Apache-2.0"
keywords = ["auth", "axum", "web", "middleware"]
categories = ["authentication", "web-programming::http-server"]

[dependencies]
authly-core = { path = "../authly-core" }
authly-session = { path = "../authly-session", features = ["store-redis", "store-sqlx", "sqlite"] }
authly-flow = { path = "../authly-flow" }
authly-providers-github = { path = "../authly-providers-github" }
authly-providers-google = { path = "../authly-providers-google" }
authly-providers-discord = { path = "../authly-providers-discord" }
authly-oidc = { path = "../authly-oidc" }
authly-token = { path = "../authly-token" }
axum = "0.8.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-cookies = "0.11.0"
axum-extra = { version = "0.12.5", features = ["cookie"] }
http = "1.0"
dotenvy = "0.15"
serde_json = "1.0"

[[example]]
name = "axum_oauth"
path = "../examples/axum_oauth.rs"

[[example]]
name = "axum_credentials"
path = "../examples/axum_credentials.rs"

[[example]]
name = "oidc_generic"
path = "../examples/oidc_generic.rs"