[package]
name = "authly-flow"
version = "0.1.0"
edition = "2021"
description = "OAuth2 and OIDC flow orchestration for the authly framework"
repository = "https://github.com/marcjazz/authly-rs"
license = "MIT OR Apache-2.0"
keywords = ["auth", "oauth2", "oidc", "flow"]
categories = ["authentication"]

[dependencies]
authly-core = { version = "0.1.0", path = "../authly-core" }
async-trait = "0.1"
authly-token = { version = "0.1.0", path = "../authly-token" }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json", "form"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "device_flow"
path = "../examples/device_flow.rs"

[[example]]
name = "client_credentials_flow"
path = "../examples/client_credentials_flow.rs"