[package]
name = "authly-providers-google"
version = "0.1.0"
edition = "2021"

[dependencies]
authly-core = { path = "../authly-core" }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
mockito = "1.0"
tokio = { version = "1.0", features = ["full"] }
